--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
     networks:
         - database_network
     environment:
-      PGADMIN_DEFAULT_EMAIL: <your-email>
-      PGADMIN_DEFAULT_PASSWORD: <your-password>
+      PGADMIN_DEFAULT_EMAIL: AlexanderStubMichelsen@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: 12345
 
 networks:
   database_network:
